css/styles.css
/* ... */
.wrapper.style3::-moz-placeholder {
    color: #b9bad3 !important;
}

.wrapper.style3:-ms-input-placeholder {
    color: #b9bad3 !important;
}

.wrapper.style3 .formerize-placeholder {
    color: #b9bad3 !important;
}

.wrapper.style3 .icon.major {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 ul.alt li {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 table tbody tr {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 table tbody tr:nth-child(2n + 1) {
    background-color: rgba(255, 255, 255, 0.075);
}

.wrapper.style3 table th {
    color: #ffffff;
}

.wrapper.style3 table thead {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 table tfoot {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 table.alt tbody tr td {
    border-color: rgba(0, 0, 0, 0.125);
}

.wrapper.style3 input[type="submit"],
.wrapper.style3 input[type="reset"],
.wrapper.style3 input[type="button"],
.wrapper.style3 button,
.wrapper.style3 .button {
    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.125);
    color: #ffffff;
}

.wrapper.style3 input[type="submit"]:hover,
.wrapper.style3 input[type="reset"]:hover,
.wrapper.style3 input[type="button"]:hover,
.wrapper.style3 button:hover,
.wrapper.style3 .button:hover {
    background-color: rgba(255, 255, 255, 0.075);
}

.wrapper.style3 input[type="submit"]:active,
.wrapper.style3 input[type="reset"]:active,
.wrapper.style3 input[type="button"]:active,
.wrapper.style3 button:active,
.wrapper.style3 .button:active {
    background-color: rgba(255, 255, 255, 0.2);
}

@media screen and (max-width: 736px) {
    .wrapper.style3 .features li {
        border-top-color: rgba(0, 0, 0, 0.125);
    }
}

.wrapper.style4 {
    background-color: transparent;
}

.wrapper.style5 {
    background-color: #ffffff;
    color: #4E4852;
}

.wrapper.style5 strong,
.wrapper.style5 b {
    color: #2E3842;
}

.wrapper.style5 h2,
.wrapper.style5 h3,
.wrapper.style5 h4,
.wrapper.style5 h5,
.wrapper.style5 h6 {
    color: #2E3842;
}

.wrapper.style5 hr {
    border-color: #dfdfdf;
}

.wrapper.style5 blockquote {
    border-color: #dfdfdf;
}

.wrapper.style5 code {
    background: rgba(0, 0, 0, 0.0375);
}

.wrapper.style5 header p {
    color: #8E8892;
}

.wrapper.style5 header.major h2,
.wrapper.style5 header.major h3,
.wrapper.style5 header.major h4,
.wrapper.style5 header.major h5,
.wrapper.style5 header.major h6 {
    border-color: #dfdfdf;
}

.wrapper.style5 header.major p {
    color: #4E4852;
}

.wrapper.style5 label {
    color: #2E3842;
}

.wrapper.style5 input[type="text"],
.wrapper.style5 input[type="password"],
.wrapper.style5 input[type="email"],
.wrapper.style5 select,
.wrapper.style5 textarea {
    background: rgba(0, 0, 0, 0.0375);
}

.wrapper.style5 .select-wrapper:before {
    color: #dfdfdf;
}

.wrapper.style5 input[type="checkbox"] + label,
.wrapper.style5 input[type="radio"] + label {
    color: #4E4852;
}

.wrapper.style5 input[type="checkbox"] + label:before,
.wrapper.style5 input[type="radio"] + label:before {
    background: rgba(0, 0, 0, 0.0375);
}

.wrapper.style5 input[type="checkbox"]:checked + label:before,
.wrapper.style5 input[type="radio"]:checked + label:before {
    background: #2E3842;
    color: #ffffff;
}

.wrapper.style5::-webkit-input-placeholder {
    color: #8E8892 !important;
}

.wrapper.style5:-moz-placeholder {
    color: #8E8892 !important;
}

.wrapper.style5::-moz-placeholder {
    color: #8E8892 !important;
}

.wrapper.style5:-ms-input-placeholder {
    color: #8E8892 !important;
}

.wrapper.style5 .formerize-placeholder {
    color: #8E8892 !important;
}

.wrapper.style5 .icon.major {
    border-color: #dfdfdf;
}

.wrapper.style5 ul.alt li {
    border-color: #dfdfdf;
}

.wrapper.style5 table tbody tr {
    border-color: #dfdfdf;
}

.wrapper.style5 table tbody tr:nth-child(2n + 1) {
    background-color: rgba(0, 0, 0, 0.0375);
}

.wrapper.style5 table th {
    color: #2E3842;
}

.wrapper.style5 table thead {
    border-color: #dfdfdf;
}

.wrapper.style5 table tfoot {
    border-color: #dfdfdf;
}

.wrapper.style5 table.alt tbody tr td {
    border-color: #dfdfdf;
}

.wrapper.style5 input[type="submit"],
.wrapper.style5 input[type="reset"],
.wrapper.style5 input[type="button"],
.wrapper.style5 button,
.wrapper.style5 .button {
    box-shadow: inset 0 0 0 2px #dfdfdf;
    color: #2E3842;
}

.wrapper.style5 input[type="submit"]:hover,
.wrapper.style5 input[type="reset"]:hover,
.wrapper.style5 input[type="button"]:hover,
.wrapper.style5 button:hover,
.wrapper.style5 .button:hover {
    background-color: rgba(0, 0, 0, 0.0375);
}

.wrapper.style5 input[type="submit"]:active,
.wrapper.style5 input[type="reset"]:active,
.wrapper.style5 input[type="button"]:active,
.wrapper.style5 button:active,
.wrapper.style5 .button:active {
    background-color: rgba(0, 0, 0, 0.1);
}

@media screen and (max-width: 736px) {
    .wrapper.style5 .features li {
        border-top-color: #dfdfdf;
    }
}

@media screen and (max-width: 980px) {
    .wrapper {
        padding: 4em 3em 2em 3em;
    }
}

@media screen and (max-width: 736px) {
    .wrapper {
        padding: 3em 2em 1em 2em;
    }
}

@media screen and (max-width: 736px) {
    .wrapper.style1 .features li {
        border-top-color: rgba(0, 0, 0, 0.125);
    }
}

.fullheight {
    height: 100vh;
    text-align: center;
}

.vh40 {
    height: 40vh;
    text-align: center;
    color: white;
}

.jumbo-callout {
    color: white;
}

.vertical-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

